--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       content="width=device-width, initial-scale=1.0 minimum-scale=1"
     />
     <title>Portfolio</title>
+    <script type="module" crossorigin src="/assets/index.fd30ee28.js"></script>
+    <link rel="stylesheet" href="/assets/index.b6f55280.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
